overflow fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,5 +3,5 @@ app-nav-bar {
 }
 
 .content-container {
-  max-height: calc(100vh - 90px);
+  max-height: calc(100vh - 112px);
 }
