--- a/src/app/watchlist/component/edit-watchlist-dialog/edit-watchlist-dialog.component.scss
+++ b/src/app/watchlist/component/edit-watchlist-dialog/edit-watchlist-dialog.component.scss
@@ -1,3 +1,3 @@
 .table-container {
-  height: 146px;
+  height: 191px;
 }
